# py-db-migrate

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: main.yml  tag.yml  test.yml
py_db_migrate/: __init__.py  configuration.py  logger.py  main.py
py_db_migrate/database/: __init__.py  postgresql.py
py_db_migrate/service/: __init__.py  migration.py  migration_down.py  migration_files.py  migration_up.py  migration_validator.py  service.py  start.py  utils.py
scripts/: test.sh
src/: main.py
src/database/: __init__.py  postgresql.py
src/service/: __init__.py  migration_files.py  service.py  start.py  utils.py
tests/: conftest.py
tests/unit/: test_configuration.py
tests/unit/database/: __init__.py  test_init.py  test_postgresql.py
tests/unit/service/: __init__.py  test_migration.py  test_migration_down.py  test_migration_files.py  test_migration_up.py  test_migration_validator.py  test_start.py  test_utils.py
